--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -1,17 +1,22 @@
 ﻿@page
 <div class="row">&nbsp;</div>
-
 <div class="row">
     <div class="col-12">
-        Message: <input type="text" id="messageInput" />
+        User..........<input type="text" id="userInput" />
+        <br />        
+        Message...<input type="text" id="messageInput" />
         <input type="button" id="sendButton" value="Send Message" />
     </div>
 </div>
 <div class="row">
     <div class="col-12">
-        <ul id="messagesList"></ul>
-    </div>        
+        <hr />
+    </div>
 </div>
-
+<div class="row">
+    <div class="col-12">
+        <ul id="messagesList"></ul>
+    </div>
+</div>
 <script src="~/lib/signalr/signalr.js"></script>
 <script src="~/js/chat.js"></script>
