Upgrade to ASP.NET Core 2.1.0 RC1

--- a/SignalRChat/Pages/Contact.cshtml
+++ b/SignalRChat/Pages/Contact.cshtml
@@ -12,3 +12,8 @@
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
+
+<address>
+    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+</address>
