--- a/SignalRChat/Pages/About.cshtml
+++ b/SignalRChat/Pages/About.cshtml
@@ -1,16 +1,9 @@
 ﻿@page
 @model AboutModel
 @{
-    ViewData["Title"] = "About SignalRChat";
+    ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
+<h3>@Model.Message</h3>
 
-<p>This is a simple ASP.NET Core SignalR Chat example</p>
-<p>
-    This example demonstrates:
-    <ul>
-        <li>SignalR Startup</li>
-        <li>Hubs</li>
-        <li>JavaScript Client</li>
-    </ul>
-</p>
+<p>Use this area to provide additional information.</p>
